# NDK

./: README.md
app/: build.gradle
app/src/androidTest/java/com/kevintu/ndk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hello-jni.c  jnicallback.c
app/src/main/cpp/util/: log.h
app/src/main/java/com/kevintu/ndk/: MainActivity.java
app/src/main/java/com/kevintu/ndk/jni/: HelloJni.java  TimerCallback.java
app/src/main/java/com/kevintu/ndk/jni/callback/: JniHelper.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/kevintu/ndk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
